--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
